--- a/style.css
+++ b/style.css
@@ -1104,11 +1104,10 @@ img {vertical-align: middle;}
   /*HAMBURGER ANOMATION*/
   .hamburder-section {
       width: 100%;
-      height: 60px;
+      height: 100vh;
       position: fixed;
       right: 0;
       z-index: 2;
-      border-bottom: 1px solid var(--heading);
   }
   .outer-menu {
     top: 0;
